jumping to another project

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Temperature</title>
+  <title>Temperature Converter</title>
 </head>
 <body>
-</div> 
   
+  <input id="Temperature" type="text">
+  <div id="ConvertedTemperature"></div>
+
+  <h3></h3>
+
+  
+  <h3></h3>
+
   <script src="converter.js"></script>
 </body>
 </html>
